--- a/gui/src/utils/md5-fix/md5-fix.ui
+++ b/gui/src/utils/md5-fix/md5-fix.ui
@@ -7,14 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>357</width>
-    <height>200</height>
+    <height>224</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Md5 list fixer</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../../resources.qrc">
+   <iconset resource="../../../resources/resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QFormLayout" name="formLayout">
@@ -68,7 +68,7 @@
    <item row="4" column="1">
     <widget class="QLineEdit" name="lineFilename"/>
    </item>
-   <item row="5" column="0" colspan="2">
+   <item row="6" column="0" colspan="2">
     <widget class="QProgressBar" name="progressBar">
      <property name="enabled">
       <bool>true</bool>
@@ -78,7 +78,7 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="0" colspan="2">
+   <item row="7" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
       <spacer name="horizontalSpacer">
@@ -109,6 +109,16 @@
      </item>
     </layout>
    </item>
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>Suffixes</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
+    <widget class="QLineEdit" name="lineSuffixes"/>
+   </item>
   </layout>
  </widget>
  <tabstops>
@@ -120,9 +130,7 @@
   <tabstop>buttonCancel</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../resources.qrc"/>
-  <include location="../../../resources.qrc"/>
-  <include location="../../../resources.qrc"/>
+  <include location="../../../resources/resources.qrc"/>
  </resources>
  <connections>
   <connection>
