--- a/gui/resources/resources.qrc
+++ b/gui/resources/resources.qrc
@@ -61,5 +61,6 @@
         <file>images/icons/eye-plus.png</file>
         <file>images/icons/github.png</file>
         <file>images/icons/tab-arrow.png</file>
+        <file>images/icons/edit.png</file>
     </qresource>
 </RCC>
