--- a/gui/src/sources/sourceswindow.ui
+++ b/gui/src/sources/sourceswindow.ui
@@ -23,10 +23,10 @@
    <string>Sources</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../resources.qrc">
+   <iconset resource="../../resources/resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,0">
+  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,0,0">
    <property name="spacing">
     <number>10</number>
    </property>
@@ -53,6 +53,72 @@
     </widget>
    </item>
    <item>
+    <layout class="QHBoxLayout" name="layoutPresets" stretch="1,0,0,0,0">
+     <item>
+      <widget class="QComboBox" name="comboPresets">
+       <item>
+        <property name="text">
+         <string notr="true"/>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="buttonPresetSave">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string notr="true"/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../resources/resources.qrc">
+         <normaloff>:/images/icons/save.png</normaloff>:/images/icons/save.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="buttonPresetEdit">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string notr="true"/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../resources/resources.qrc">
+         <normaloff>:/images/icons/edit.png</normaloff>:/images/icons/edit.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="buttonPresetDelete">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../../resources/resources.qrc">
+         <normaloff>:/images/icons/remove.png</normaloff>:/images/icons/remove.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="buttonPresetAdd">
+       <property name="text">
+        <string notr="true"/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../resources/resources.qrc">
+         <normaloff>:/images/icons/add.png</normaloff>:/images/icons/add.png</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <widget class="QScrollArea" name="scrollArea">
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
@@ -72,7 +138,7 @@
         <x>0</x>
         <y>0</y>
         <width>297</width>
-        <height>477</height>
+        <height>443</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -145,9 +211,7 @@
   <tabstop>buttonOk</tabstop>
  </tabstops>
  <resources>
-  <include location="../../resources.qrc"/>
-  <include location="../../resources.qrc"/>
-  <include location="../../resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
  </resources>
  <connections>
   <connection>
@@ -157,8 +221,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>125</x>
-     <y>379</y>
+     <x>223</x>
+     <y>546</y>
     </hint>
     <hint type="destinationlabel">
      <x>130</x>
@@ -173,8 +237,8 @@
    <slot>valid()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>212</x>
-     <y>373</y>
+     <x>304</x>
+     <y>546</y>
     </hint>
     <hint type="destinationlabel">
      <x>217</x>
@@ -189,12 +253,92 @@
    <slot>addSite()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>34</x>
-     <y>370</y>
+     <x>44</x>
+     <y>546</y>
     </hint>
     <hint type="destinationlabel">
      <x>50</x>
      <y>375</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>comboPresets</sender>
+   <signal>currentTextChanged(QString)</signal>
+   <receiver>sourcesWindow</receiver>
+   <slot>selectPreset(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>34</x>
+     <y>45</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>5</x>
+     <y>50</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonPresetSave</sender>
+   <signal>clicked()</signal>
+   <receiver>sourcesWindow</receiver>
+   <slot>savePreset()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>211</x>
+     <y>52</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>151</x>
+     <y>65</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonPresetEdit</sender>
+   <signal>clicked()</signal>
+   <receiver>sourcesWindow</receiver>
+   <slot>editPreset()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>229</x>
+     <y>53</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>190</x>
+     <y>84</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonPresetDelete</sender>
+   <signal>clicked()</signal>
+   <receiver>sourcesWindow</receiver>
+   <slot>deletePreset()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>261</x>
+     <y>45</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>227</x>
+     <y>68</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonPresetAdd</sender>
+   <signal>clicked()</signal>
+   <receiver>sourcesWindow</receiver>
+   <slot>addPreset()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>289</x>
+     <y>52</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>288</x>
+     <y>68</y>
     </hint>
    </hints>
   </connection>
@@ -203,5 +347,10 @@
   <slot>valid()</slot>
   <slot>checkAll(int)</slot>
   <slot>addSite()</slot>
+  <slot>selectPreset(QString)</slot>
+  <slot>addPreset()</slot>
+  <slot>deletePreset()</slot>
+  <slot>editPreset()</slot>
+  <slot>savePreset()</slot>
  </slots>
 </ui>
