Fix download window sometimes not changing icon

--- a/gui/resources/resources.qrc
+++ b/gui/resources/resources.qrc
@@ -62,5 +62,6 @@
         <file>images/icons/github.png</file>
         <file>images/icons/tab-arrow.png</file>
         <file>images/icons/edit.png</file>
+        <file>images/status/ignored.png</file>
     </qresource>
 </RCC>
